--- a/style/style.scss
+++ b/style/style.scss
@@ -20,13 +20,15 @@
     font-size: 18px;
 }
 
-.home {
+.home,
+.about {
     height: 90vh;
     position: absolute;
     width: 100%;
 }
 
-.home-content {
+.home-content,
+.about-content {
     height: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -48,4 +50,8 @@
 
 .home {
     background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+}
+
+.about {
+    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 }
